2010-04-06  Mattias Nissler  <mnissler@chromium.org>

Reviewed by Pavel Feldman.

        Rework inspector docking to issue a request call from the frontend
        whenever the user triggers to (un)dock the inspector window. Doing so
        enables InspectorFrontendHost implementations to asynchronously decide
        whether the window is docked or not. The old canAttachWindow() is not
        required anymore, remove it.
        https://bugs.webkit.org/show_bug.cgi?id=36944

        * inspector/InspectorFrontendClient.h:
        * inspector/InspectorFrontendClientLocal.cpp:
        (WebCore::InspectorFrontendClientLocal::requestAttachWindow):
        * inspector/InspectorFrontendClientLocal.h:
        * inspector/InspectorFrontendHost.cpp:
        (WebCore::InspectorFrontendHost::requestAttachWindow):
        * inspector/InspectorFrontendHost.h:
        * inspector/InspectorFrontendHost.idl:
        * inspector/front-end/inspector.js:
        (WebInspector.toggleAttach):

2010-04-06  Mattias Nissler  <mnissler@chromium.org>

        Reviewed by Pavel Feldman.

        Handle docking requests from the developer tools and forward them to
        WebDevToolsFrontendClient.
        https://bugs.webkit.org/show_bug.cgi?id=36944

        * public/WebDevToolsFrontendClient.h:
        (WebKit::WebDevToolsFrontendClient::requestDockWindow):
        * src/WebDevToolsFrontendImpl.cpp:
        (WebKit::WebDevToolsFrontendImpl::WebDevToolsFrontendImpl):
        (WebKit::WebDevToolsFrontendImpl::jsRequestAttachWindow):
        * src/WebDevToolsFrontendImpl.h:


Canonical link: https://commits.webkit.org/48439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57146 268f45cc-cd09-0410-ab3c-d52691b4dbfc